added link to my timer app

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         .btn-lab {
             display: inline-block;
             margin-top: 15px;
-            padding: 10px 20px;
+            padding: 12px 20px;
             background-color: var(--color-accent);
             color: white !important;
             text-decoration: none;
@@ -114,12 +114,13 @@
             transition: all 0.3s ease;
             text-align: center;
             border: none;
+            box-shadow: 0 2px 4px rgba(10, 61, 98, 0.1);
         }
 
         .btn-lab:hover {
             background-color: var(--color-button-hover);
-            transform: translateY(-1px);
-            box-shadow: 0 4px 8px rgba(10, 61, 98, 0.2);
+            transform: translateY(-2px);
+            box-shadow: 0 4px 12px rgba(10, 61, 98, 0.25);
         }
 
         /* --- Specific Card Sizing (Desktop) --- */
@@ -281,8 +282,10 @@
     <div class="card card-case-study">
         <h3>🧪 Mini Case Study</h3>
         <p><strong>Title:</strong> Starch Gelatinization</p>
-        <p class="card-content">Analyzing the impact of ingredient ratios on *Kuih Lapis* texture for optimal chewiness.</p>
-        <a href="[PASTE YOUR APP URL HERE]" class="btn-lab" target="_blank">Try My Lab Timer App</a>
+        <p>Analyzing the impact of ingredient ratios on *Kuih Lapis* texture for optimal chewiness.</p>
+        <div class="card-content">
+            <a href="https://s79060.github.io/lab-timer-app/" class="btn-lab" target="_blank">Try My Lab Timer App</a>
+        </div>
     </div>
 
     <div class="card card-hobby">
@@ -298,7 +301,7 @@
 
     <div class="card card-playlist">
         <h3 style="margin-bottom: 10px;">🎧 Focus Playlist</h3>
-        <iframe data-testid="embed-iframe" style="border-radius:12px" src="https://open.spotify.com/embed/playlist/37i9dQZF1DWZf97qyq2iJu?utm_source=generator" width="100%" height="80" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+       <iframe data-testid="embed-iframe" style="border-radius:12px" src="https://open.spotify.com/embed/playlist/37i9dQZF1EQnsJ0xmvpihE?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
     </div>
 
 </div>
